fix text wrapping in header

--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -241,6 +241,7 @@ header.default ul.nav > li {
 header.default ul.nav > li > ul > li {
     display: table-cell;
     vertical-align: middle;
+    white-space: nowrap;
     padding: 5px 20px;
     border-left: 1px solid rgba(0, 0, 0, .4);
     transition: all .3s;
@@ -1273,7 +1274,7 @@ header.default .tagline {
     width: 130px;
     position: absolute;
     top: 28px;
-    
+
     left: 180px;
     font-size: 13px;
     line-height: 1.2;
